@startuml DomainModel
package JobOpeningAgg {

    class JobOpening {
        +title: JobOpeningTitle
    }

    class Phase {
        +id: PhaseName
    }

    class JobReference {
        +customerCode: String
        +jobCode: int
    }

    enum PhaseName {
        ANALYSIS
    }

    class PhaseStatus {
        +status: PhaseStatusName
    }

    class RecruitmentProcess {
        +id: Long
        +phases: List<Phases>
    }

    JobOpening --> JobReference
    JobOpening --> RecruitmentProcess
    RecruitmentProcess --> Phase
    Phase --> PhaseName: "Is in phase"
    Phase --> PhaseStatus

    
}

package ApplicationAgg {
    class Application {
        +id: ApplicationID
        +interview: Interview
    }

    class Interview {
        +grade: InterviewGrade
    }


    class InterviewGrade {
        +grade: int
    }

    Application --> Interview
    Application --> JobOpening : Refers to
    Interview --> InterviewGrade


}





package CandidateAgg {
    class Candidate {
        +email: CandidateEmail
        +name: CandidateName
    }

    class CandidateEmail {
        +email: String
    }

    class CandidateName {
        +firstName: String
        +lastName: String
    }

    Application --> Candidate : Is submitted by
    Candidate --> CandidateEmail
    Candidate --> CandidateName
}


@enduml
